# Amazon_Scrape_Backend

./: .env  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  FEATURES.md  GMAIL_SETUP.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  README_IMPLEMENTATION.md  TESTING_GUIDE.md  TEST_EMAIL_SERVICE.md  db.sqlite3  example_workflow.sh  pyproject.toml  verify_email.py
Scraping_Event/: admin.py  apps.py  email_service.py  models.py  scraper.py  serializers.py  tests.py  urls.py  views.py
Scraping_Event/management/commands/: check_prices.py
Scraping_Event/migrations/: 0001_initial.py
Scraping_Event/static/css/: style.css
Scraping_Event/static/js/: main.js
Scraping_Event/templates/Scraping_Event/: base.html  home.html  product_detail.html
main_api/: settings.py  urls.py  views.py
